--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -25,7 +25,7 @@
     <div class="background-img">
         <div class="caption text-center">
             <h1> Mongo Scraper </h1>
-            <h5> NY times </h5>
+            <h5> LA times </h5>
         </div>
     </div>
 </div>
