--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@
 
 .jumbotron {
     height: 500px;
-    background-image: url("/assets/images/digital-tablet-showing-news-1426748763-331300.jpg");
+    background-image: url("/assets/images/news.jpg");
     background-size: cover;
     box-shadow: 2px 2px 2px;
     opacity: 0.5; 
