--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,8 @@
                 <h5 class="card-title alert alert-dark"> {{title}} </h5>
                 <hr>
                 <p class="card-text">{{description}}</p>
-                <a href="{{link}}" target="_blank" class="btn btn-primary">Read Article </a>
-                <button class="btn btn-success saveArticle-btn" data-id={{this._id}} data-toggle="modal" data-target="#ArticleSavedModal" > Save Article</A></button>
+                <a href="{{article.link}}" target="_blank" class="btn btn-primary">Read Article </a>
+                <button class="btn btn-success saveArticle-btn" data-id={{this._id}}  data-toggle="modal"data-target="#ArticleSavedModal" > Save Article</A></button>
                 <a href="/addComments/{{this._id}}" id="commentbtn"><img src="/assets/images/comment.png"
                         width="40px" height="40px"></a>
             </div>
